Roughly fixed up the current commands to work with the new system